# InterviewAssignment

./: Cargo.toml
client/: Cargo.toml  build.rs
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/defines/: book_callback.rs  error.rs  exchanges.rs  json_parser.rs
server/src/feed/: mod.rs  orderbook_feed.rs  ws_api_feed.rs
server/src/feed/exchanges/binance/: mod.rs
server/src/feed/exchanges/bitstamp/: json_messages.rs  mod.rs
server/src/grpc_server/: mod.rs
server/src/helper/: mod.rs
server/src/marketdata/: mod.rs
src/: main.rs
src/defines/: error.rs  exchanges.rs  grpc_scheme.rs  json_parser.rs  mod.rs
src/feed/: mod.rs  orderbook_feed.rs  ws_api_feed.rs
src/feed/exchanges/: mod.rs
src/feed/exchanges/binance/: json_messages.rs  mod.rs
src/feed/exchanges/bitstamp/: json_messages.rs  mod.rs
src/grpc_server/: mod.rs
src/helper/: mod.rs
src/marketdata/: mod.rs
