[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.28.2", features = ["macros", "net", "rt", "time", "rt-multi-thread","sync"] }
serde_json = "1.0.97"
async-trait = "0.1.68"
tokio-stream = {version = "0.1.14", features = ["sync"]}
serde = {version =  "1.0.164", features = ["derive"] }
url = "2.4.0"
env_logger = "0.10.0"
log = "0.4.19"
futures-util = "0.3.28"
clap = { version = "4.3.4", features = ["derive"] }
halfbrown = "0.2.2"
smallvec = { version =  "1.10.0", features =["serde"] }
rust_decimal = "1.30.0"
tonic = "0.9.2"
prost = "0.11.9"
parking_lot = "0.12.1"
async-broadcast = "0.5.1"

[dev-dependencies]
rust_decimal = { version = "1.30.0", features = ["rand"] }
rand = "0.8.5"
rust_decimal_macros = "1.30.0"
float-cmp = "0.9.0"
[build-dependencies]
tonic-build = "0.9.2"
